# libkgapi

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  AUTHORS  CHANGELOG  CMakeLists.txt  KF5GAPIConfig.cmake.in  KPimGAPIConfig.cmake.in  LibKGAPIConfig.cmake.in  LibKGoogleConfig.cmake.in  Mainpage.dox  Messages.sh  README  README.md  README.md.license  TODO  akonadi-google.kdev4  metainfo.yaml
autotests/: CMakeLists.txt  fakeaccountstorage.cpp  fakeaccountstorage.h  fakeauthbrowser.cpp  fakeauthbrowser.h  fakeauthwidget.cpp  fakeauthwidget.h  fakenamtest.cpp  fakenetworkaccessmanager.cpp  fakenetworkaccessmanager.h  fakenetworkaccessmanagerfactory.cpp  fakenetworkaccessmanagerfactory.h  fakenetworkreply.cpp  fakenetworkreply.h  objectsaccountinfotests.cpp  objectsaccountinfotests.h  objectscalendartests.cpp  objectscalendartests.h  objectscontactsgrouptests.cpp  objectscontactsgrouptests.h  objectscontacttests.cpp  objectscontacttests.h  objectseventtests.cpp  objectseventtests.h  objectslocationtests.cpp  objectslocationtests.h  objectstasklisttests.cpp  objectstasklisttests.h  objectstasktests.cpp  objectstasktests.h  objectstaticmapurltests.cpp  objectstaticmapurltests.h  servicesaccountinfotests.cpp  servicesaccountinfotests.h  servicescalendartests.cpp  servicescalendartests.h  servicescontactstests.cpp  servicescontactstests.h  serviceslatitudetests.cpp  serviceslatitudetests.h  (+4 more)
autotests/calendar/: calendarcreatejobtest.cpp  calendardeletejobtest.cpp  calendarfetchjobtest.cpp  calendarmodifyjobtest.cpp  calendartestutils.cpp  calendartestutils.h  eventcreatejobtest.cpp  eventdeletejobtest.cpp  eventfetchjobtest.cpp  eventmodifyjobtest.cpp  freebusyqueryjobtest.cpp
autotests/contacts/: contactcreatejobtest.cpp  contactdeletejobtest.cpp  contactfetchjobtest.cpp  contactfetchphotojobtest.cpp  contactmodifyjobtest.cpp  contactsgroupcreatejobtest.cpp  contactsgroupdeletejobtest.cpp  contactsgroupfetchjobtest.cpp  contactsgroupmodifyjobtest.cpp  contactstestutils.cpp  contactstestutils.h
autotests/core/: accountinfofetchjobtest.cpp  accountmanagertest.cpp  createjobtest.cpp  fetchjobtest.cpp
autotests/data/: contacts.ini  contacts_groups.ini
autotests/drive/: aboutfetchjobtest.cpp  changefetchjobtest.cpp  drivescreatejobtest.cpp  drivesdeletejobtest.cpp  drivesfetchjobtest.cpp  driveshidejobtest.cpp  drivesmodifyjobtest.cpp  drivessearchquerytest.cpp  drivetestutils.cpp  drivetestutils.h  filecopyjobtest.cpp  filecreatejobtest.cpp  filesearchquerytest.cpp  teamdrivecreatejobtest.cpp  teamdrivedeletejobtest.cpp  teamdrivefetchjobtest.cpp  teamdrivemodifyjobtest.cpp  teamdrivesearchquerytest.cpp
autotests/people/: contactgroupcreatejobtest.cpp  contactgroupdeletejobtest.cpp  (+11 more)
calendar/: .CMakeLists.txt.kate-swp  CMakeLists.txt  calendar.cpp  calendar.h  calendareditor.cpp  calendareditor.h  calendarlistjob.cpp  calendarlistjob.h  calendarresource.cpp  calendarresource.h  defaultreminderattribute.cpp  defaultreminderattribute.h  event.cpp  event.h  event_p.h  eventcreatejob.cpp  eventcreatejob.h  eventdeletejob.cpp  eventdeletejob.h  eventjob.cpp  eventjob.h  eventlistjob.cpp  eventlistjob.h  eventupdatejob.cpp  eventupdatejob.h  googlecalendarresource.desktop  resource_events.cpp  resource_tasks.cpp  settings.cpp  settings.h  settingsbase.kcfg  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  tasklisteditor.cpp  tasklisteditor.h
contacts/: CMakeLists.txt  contact.cpp  contact.h  contact_p.h  contactchangejob.cpp  contactchangejob.h  contactcreatejob.cpp  contactcreatejob.h  contactdeletejob.cpp  contactdeletejob.h  contactjob.cpp  contactjob.h  contactlistjob.cpp  contactlistjob.h  contactsresource.cpp  contactsresource.h  fetchvirtualcontactsjob.cpp  fetchvirtualcontactsjob.h  googlecontactsresource.desktop  groupattribute.cpp  groupattribute.h  groupeditor.cpp  groupeditor.h  photojob.cpp  photojob.h  settings.cpp  settings.h  settingsbase.kcfg  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  timestampattribute.cpp  timestampattribute.h
libkgapi/: CMakeLists.txt  LibKGAPIConfig.cmake.in  accessmanager.cpp  accessmanager.h  accessmanager_p.cpp  accessmanager_p.h  account.cpp  account.h  account_p.h  auth.cpp  auth.h  auth_p.cpp  auth_p.h  common.h  debug.cpp  fetchlistjob.cpp  fetchlistjob.h  fetchlistjob_p.h  libkgapi.pc.cmake  libkgapi_export.h  object.cpp  object.h  object_p.h  reply.cpp  reply.h  request.cpp  request.h  service.h
libkgapi2/: CMakeLists.txt  LibKGAPI2Config.cmake.in  account.cpp  account.h  authjob.cpp  authjob.h  createjob.cpp  createjob.h  debug.h  deletejob.h  fetchjob.cpp  fetchjob.h  job.cpp  job.h  libkgapi2.pc.cmake  libkgapi2_export.h  libkgapi_export.h  modifyjob.cpp  modifyjob.h  object.cpp  object.h  types.h  utils.cpp
libkgoogle/: CMakeLists.txt  accessmanager.cpp  accessmanager.h  accessmanager_p.cpp  accessmanager_p.h  account.cpp  account.h  auth.cpp  auth.h  auth_p.cpp  auth_p.h  authdialog.cpp  authdialog.h  common.h  fetchlistjob.cpp  fetchlistjob.h  fetchlistjob_p.h  kgoogleaccessmanager.cpp  kgoogleaccessmanager.h  kgoogleauth.cpp  kgoogleauth.h  kgoogleobject.cpp  kgoogleobject.h  kgooglereply.cpp  kgooglereply.h  kgooglerequest.cpp  kgooglerequest.h  kgoogleservice.h  libkgoogle.pc.cmake  libkgoogle_export.h  object.cpp  object.h  reply.cpp  reply.h  request.cpp  request.h  service.h
src/: CMakeLists.txt  debug.cpp  debug.h  libkgapi.categories
tests/: CMakeLists.txt  authdialog_test.cpp  authdialog_test.h  objectsaccountinfotests.cpp  objectscalendartests.cpp  objectscontactsgrouptests.cpp  objectscontactsgrouptests.h  objectscontacttests.cpp  objectseventtests.cpp  objectslocationtests.cpp  objectslocationtests.h  objectstasklisttests.cpp  objectstasklisttests.h  objectstasktests.cpp  objectstaticmapurltests.cpp  servicesaccountinfotests.cpp  servicesaccountinfotests.h  servicescalendartests.cpp  servicescalendartests.h  servicescontactstests.cpp  servicescontactstests.h  serviceslatitudetests.cpp  serviceslatitudetests.h  servicestaskstests.cpp  testcontacts.cpp
(+1339 files in other folders)
